feat udistrital/arka_cliente#1111: Consecutivo Movimientos
- Se ajusta algoritmo de consulta de cierre a una fecha determinada teniendo en cuenta la nueva columna fecha_corte.
