# controllers/cierre.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"encoding/json"
+	"time"
 
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/logs"
@@ -9,13 +10,13 @@ import (
 	"github.com/udistrital/utils_oas/errorctrl"
 )
 
-// BajasController
-type DepreciacionController struct {
+// CierreController
+type CierreController struct {
 	beego.Controller
 }
 
 // URLMapping ...
-func (c *DepreciacionController) URLMapping() {
+func (c *CierreController) URLMapping() {
 	c.Mapping("GetCorte", c.GetCorte)
 	c.Mapping("Post", c.Post)
 }
@@ -27,12 +28,18 @@ func (c *DepreciacionController) URLMapping() {
 // @Success 201 {int} models.TransaccionCierre
 // @Failure 400 the request contains incorrect syntax
 // @router / [post]
-func (c *DepreciacionController) Post() {
+func (c *CierreController) Post() {
 
 	var v models.TransaccionCierre
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err != nil {
 		logs.Error(err)
 		panic(errorctrl.Error(`Post - json.Unmarshal(c.Ctx.Input.RequestBody, &v)`, err, "400"))
+	}
+
+	if v.MovimientoId == 0 {
+		err := "Debe especificar un cierre para ser aprobado"
+		logs.Error(err)
+		panic(errorctrl.Error(`Post - v.MovimientoId == 0`, err, "400"))
 	}
 
 	var m models.Movimiento
@@ -54,7 +61,7 @@ func (c *DepreciacionController) Post() {
 // @Success 200 {object} []models.DepreciacionElemento
 // @Failure 404 not found resource
 // @router / [get]
-func (c *DepreciacionController) GetCorte() {
+func (c *CierreController) GetCorte() {
 
 	var fecha string
 	if fecha_ := c.GetString("fechaCorte"); fecha_ == "" {
@@ -62,6 +69,11 @@ func (c *DepreciacionController) GetCorte() {
 		panic(errorctrl.Error(`GetCorte - c.GetString("fechaCorte")`, err, "400"))
 	} else {
 		fecha = fecha_
+	}
+
+	_, err := time.Parse("2006-01-02", fecha)
+	if err != nil {
+		panic(errorctrl.Error(`GetCorte - time.Parse("2006-01-02", fecha)`, err, "400"))
 	}
 
 	elementos := make([]*models.DepreciacionElemento, 0)
